tests/ui/lifetimes/lifetime-errors/issue_74400.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/issue_74400.rs:12:5
   |
LL |     f(data, identity)
   |     ^^^^^^^^^^^^^^^^^
   |     |
   |     the parameter type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn g<T: 'static>(data: &[T]) {
   |       +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/issue_74400.rs:12:5
   |
LL |     f(data, identity)
   |     ^^^^^^^^^^^^^^^^^
   |     |
   |     the parameter type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider adding an explicit lifetime bound
   |
LL | fn g<T: 'static>(data: &[T]) {
   |       +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/issue_74400.rs:12:5
   |
LL |     f(data, identity)
   |     ^^^^^^^^^^^^^^^^^
   |     |
   |     the parameter type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider adding an explicit lifetime bound
   |
LL | fn g<T: 'static>(data: &[T]) {
   |       +++++++++

error: implementation of `Fn` is not general enough
  --> $DIR/issue_74400.rs:12:5
   |
LL |     f(data, identity)
   |     ^^^^^^^^^^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: `fn(&'2 T) -> &'2 T {identity::<&'2 T>}` must implement `Fn<(&'1 T,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 T,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue_74400.rs:12:5
   |
LL |     f(data, identity)
   |     ^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: `fn(&'2 T) -> &'2 T {identity::<&'2 T>}` must implement `FnOnce<(&'1 T,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 T,)>`, for some specific lifetime `'2`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0310`.
